some changes with vscode

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:esp32doit-devkit-v1]
+monitor_baud = 115200
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
